libstream-perl (0.7.0) UNRELEASED; urgency=low

  * Stream::Filter is not an ancestor of Stream::Out anymore
  * process() function understands chunk_size and commit_step options

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Sun, 28 Feb 2010 18:57:31 +0300

libstream-perl (0.6.6) unstable; urgency=low

  * flushable filters cannot be attached to input streams
  * FilteredOut commit result reverted

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Sat, 27 Feb 2010 18:20:13 +0300

libstream-perl (0.6.5) unstable; urgency=low

  * commitable filters 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Sat, 27 Feb 2010 16:18:04 +0300

libstream-perl (0.6.4) unstable; urgency=low

  * Stream::Filter: write method works in scalar context
  * many doc improvements
  * process(): chunk size defaults to 100 instead of 1000

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 19 Feb 2010 16:00:55 +0300

libstream-perl (0.6.3) unstable; urgency=low

  * Stream::File: documentation fixed; write_chunk([]) don't print warning

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 05 Feb 2010 20:29:53 +0300

libstream-perl (0.6.2) unstable; urgency=low

  * bracket syntax in catalog implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 14 Dec 2009 00:11:20 +0300

libstream-perl (0.6.1) unstable; urgency=low

  * Stream::Log: stream is a proxy to stream_by_name when parameter is a
    string
  * Stream::Mixin::Filterable: work correctly with complex filters

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 25 Nov 2009 21:18:13 +0300

libstream-perl (0.6.0) unstable; urgency=low

  * Stream::Formatter - both-way wrapper for any storage
  * Stream::Formatter::LinedStorable - first formatter
  * deprecated Stream::*::Stream packages removed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 23 Nov 2009 19:38:08 +0300

libstream-perl (0.5.11) unstable; urgency=low
