@@ -1,7 +1,7 @@
 Source: libstream-perl
 Section: perl
 Priority: optional
-Build-Depends: cdbs, debhelper (>= 5), libparams-validate-perl, libperl6-slurp-perl, libstream-more-perl, libtest-exception-perl, libtest-pod-coverage-perl, libtest-pod-perl, libyandex-db-perl, libyandex-lockf-perl, libyandex-logger-perl, libyandex-persistent-perl, libyandex-ppb-db-perl, libyandex-ppb-test-perl, libyandex-tmpfile-perl, libyandex-unrotate-perl, libyandex-version-perl, libyandex-x-perl, perl, perl-modules, yandex-dh-builddeps
+Build-Depends: cdbs, debhelper (>= 5), libparams-validate-perl, libperl6-slurp-perl, libstream-more-perl, libtest-exception-perl, libtest-pod-coverage-perl, libtest-pod-perl, libtest-simple-perl, libyandex-db-perl, libyandex-lockf-perl, libyandex-logger-perl, libyandex-persistent-perl, libyandex-ppb-db-perl, libyandex-ppb-test-perl, libyandex-tmpfile-perl, libyandex-unrotate-perl, libyandex-version-perl, libyandex-x-perl, perl, perl-modules, yandex-dh-builddeps
 # [dh_builddeps] line above is autogenerated; don't touch it
 Build-Depends-Indep: perl (>= 5.8.8)
 Maintainer: Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>
