@@ -2,6 +2,8 @@ libstream-perl (0.7.0) UNRELEASED; urgency=low
 
   * Stream::Filter is not an ancestor of Stream::Out anymore
   * process() function understands chunk_size and commit_step options
+  * Stream::Catalog::Plugin::File: saner error message, don't dump full
+    content
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Sun, 28 Feb 2010 18:57:31 +0300
 
